--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <meta name="theme-color" content="#ffffff" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link
-            href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap"
+            href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap"
             rel="stylesheet"
         />
         <title>Cosmos</title>
