--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Roboto|Open+Sans&display=swap" rel="stylesheet" />
     <title>Cosmos</title>
 </head>
 
